--- a/index.html
+++ b/index.html
@@ -1,18 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Penguin - Fashion</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Penguin - Fashion</title>
 
-  <!-- tailwind-cdn-link -->
-  <script src="https://cdn.tailwindcss.com"></script>
+    <!-- tailwind-cdn-link -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
-</head>
-<body>
-  <header>
-    <div class="container "></div>
-  </header>
-</body>
+    <!-- tailwind-template-cdn-link -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.2/flowbite.min.css"
+      rel="stylesheet"
+    />
+    <!-- fontawesome-cdn-link -->
+    <script
+      src="https://kit.fontawesome.com/95c7008c99.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <script>
+      tailwind.config = {
+        theme: {
+          screens: {
+            'xs': "480px",
+            'sm': "576px",
+            'md': "768px",
+            'lg': "1024px",
+            'xl': "768px",
+            '2xl': "1024px",
+          },
+          extend: {},
+        },
+      };
+    </script>
+  </head>
+  <body>
+    <header class="bg-[#FFFBF0]">
+      <nav
+        class="flex items-center justify-between px-5 md:px-10 lg:px-28 py-6"
+      >
+        <div>
+          <img src="images/logo.png" class="w-72 md:w-60 cursor-pointer" />
+        </div>
+
+        <ul
+          class="capitalize font-semibold md:text-lg hidden md:flex gap-5 lg:gap-12 items-center"
+        >
+          <li class="transition-all duration-300 hover:text-[#A4BC46]">
+            <a href="">home</a>
+          </li>
+          <li class="transition-all duration-300 hover:text-[#A4BC46]">
+            <a href="">product</a>
+          </li>
+          <li class="transition-all duration-300 hover:text-[#A4BC46]">
+            <a href="">about us</a>
+          </li>
+          <li class="transition-all duration-300 hover:text-[#A4BC46]">
+            <a href="">contact us</a>
+          </li>
+        </ul>
+
+        <i class="fa-solid fa-bars block md:hidden text-2xl"></i>
+      </nav>
+
+      <div
+        class="flex flex-col sm:flex-row items-center justify-between px-5 md:px-10 lg:px-28 py-10 gap-7"
+      >
+        <div class="w-full">
+          <h1 class="uppercase text-[#FABE4C] font-extrabold text-3xl sm:text-5xl leading-tight">
+            <span>Be the Penguins</span><br /><span class="text-[#363958]">of Winter</span></h1>
+          <p class="my-4">
+            Lorem Ipsum is simply dummy text of the printing <br />
+            and typesetting industry.
+          </p>
+          <button
+            class="bg-[#A4BC46] text-white px-5 py-3 sm:px-9 sm:py-5 rounded-md"
+          >
+            <i class="fa-solid fa-cart-shopping"></i> BUY NOW
+          </button>
+        </div>
+        <div>
+          <img src="images/model.png" alt="" />
+        </div>
+      </div>
+    </header>
+
+    <main class="px-5 md:px-10 lg:px-28 py-6">
+    <section>
+      <h2 class="uppercase text-3xl text-[#363958] font-extrabold">
+        woman jacket
+      </h2>
+
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 my-12 gap-7">
+        <!-- !card-1 -->
+        <div class="bg-gray-300 p-5 rounded-xl">
+          <div class="text-center w-full mx-auto">
+            <img src="images/jacket-1.png" class="w-full" />
+          </div>
+          <h3 class="text-3xl font-bold mt-3">Yellow Coat Jacket</h3>
+          <p class="my-6">Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.</p>
+          <div class="flex justify-between items-center">
+            <p class="font-bold text-[#FABE4C] text-4xl sm:text-3xl">$234</p>
+            <button class="bg-[#A4BC46] text-white rounded-md px-4 py-3 xs:px-6 xs:py-5 sm:px-4 sm:py-3 md:px-4 ">
+              <i class="fa-solid fa-cart-shopping"></i> <span class="">BUY NOW</span>
+            </button>
+          </div>
+        </div>
+
+        <!-- !card-2 -->
+        <div class="bg-gray-300 p-5 rounded-xl">
+          <div class="text-center w-full mx-auto">
+            <img src="images/jacket-1.png" class="w-full" />
+          </div>
+          <h3 class="text-3xl  font-bold mt-3">Yellow Coat Jacket</h3>
+          <p class="my-6">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </p>
+          <div class="flex justify-between items-center">
+            <p class="font-bold text-[#FABE4C] text-4xl sm:text-3xl">$234</p>
+            <button class="bg-[#A4BC46] text-white rounded-md px-4 py-3 xs:px-6 xs:py-5 sm:px-4 sm:py-3 md:px-4 ">
+              <i class="fa-solid fa-cart-shopping"></i> <span class="">BUY NOW</span>
+            </button>
+          </div>
+        </div>
+
+        <!-- !card-3 -->
+        <div class="bg-gray-300 p-5 rounded-xl">
+          <div class="text-center w-full mx-auto">
+            <img src="images/jacket-1.png" class="w-full" />
+          </div>
+          <h3 class="text-3xl font-bold mt-3">Yellow Coat Jacket</h3>
+          <p class="my-6">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </p>
+          <div class="flex justify-between items-center">
+            <p class="font-bold text-[#FABE4C] text-4xl sm:text-3xl">$234</p>
+            <button class="bg-[#A4BC46] text-white rounded-md px-4 py-3 xs:px-6 xs:py-5 sm:px-4 sm:py-3 md:px-4 ">
+              <i class="fa-solid fa-cart-shopping"></i> <span class="">BUY NOW</span>
+            </button>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- !gens jacket -->
+    <section class="pt-20">
+      <h2 class="uppercase text-3xl text-[#363958] font-extrabold">
+        man jacket
+      </h2>
+
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 my-12 gap-7">
+        <!-- !card-1 -->
+        <div class="bg-gray-300 p-5 rounded-xl">
+          <div class="text-center w-full mx-auto">
+            <img src="images/jacket-4.png" class="w-full relative hover:-translate-x-3 transition-all duration-1000" />
+          </div>
+          <h3 class="text-3xl font-bold mt-3">Yellow Coat Jacket</h3>
+          <p class="my-6">Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.</p>
+          <div class="flex justify-between items-center">
+            <p class="font-bold text-[#FABE4C] text-4xl sm:text-3xl">$234</p>
+            <button class="bg-[#A4BC46] text-white rounded-md px-4 py-3 xs:px-6 xs:py-5 sm:px-4 sm:py-3 md:px-4 ">
+              <i class="fa-solid fa-cart-shopping"></i> <span class="">BUY NOW</span>
+            </button>
+          </div>
+        </div>
+
+        <!-- !card-2 -->
+        <div class="bg-gray-300 p-5 rounded-xl">
+          <div class="text-center w-full mx-auto">
+            <img src="images/jacket-5.png" class="w-full relative hover:-translate-x-3 transition-all duration-1000" />
+          </div>
+          <h3 class="text-3xl  font-bold mt-3">Yellow Coat Jacket</h3>
+          <p class="my-6">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </p>
+          <div class="flex justify-between items-center">
+            <p class="font-bold text-[#FABE4C] text-4xl sm:text-3xl">$234</p>
+            <button class="bg-[#A4BC46] text-white rounded-md px-4 py-3 xs:px-6 xs:py-5 sm:px-4 sm:py-3 md:px-4 ">
+              <i class="fa-solid fa-cart-shopping"></i> <span class="">BUY NOW</span>
+            </button>
+          </div>
+        </div>
+
+        <!-- !card-3 -->
+        <div class="bg-gray-300 p-5 rounded-xl">
+          <div class="text-center w-full mx-auto">
+            <img src="images/jacket-6.png" class="w-full relative hover:-translate-x-3 transition-all duration-1000" />
+          </div>
+          <h3 class="text-3xl font-bold mt-3">Yellow Coat Jacket</h3>
+          <p class="my-6">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </p>
+          <div class="flex justify-between items-center">
+            <p class="font-bold text-[#FABE4C] text-4xl sm:text-3xl">$234</p>
+            <button class="bg-[#A4BC46] text-white rounded-md px-4 py-3 xs:px-6 xs:py-5 sm:px-4 sm:py-3 md:px-4 ">
+              <i class="fa-solid fa-cart-shopping"></i> <span class="">BUY NOW</span>
+            </button>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- !our services -->
+
+    <section>
+      <div class="grid grid-cols-1 sm:grid-cols-2 ">
+        <div class="order-2">
+          <div class="flex items-center p-6 gap-8">
+            <div class="w-1/6 sm:w-3/6 md:w-1/6">
+              <img src="icons/image-12.png" class="">
+            </div>
+            <div>
+              <h4 class="text-2xl font-bold">Find the Perfect Fit</h4>
+              <p>Everybody is different, which is why we <br>offer styles for every body.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row-span-3 sm:order-2 flex items-center justify-center">
+          <img src="images/shopping.png" class="relative hover:scale-110 transition-all duration-1000">          
+        </div>
+        <div class="order-2">
+          <div class="flex items-center p-6 gap-8">
+            <div class="w-1/6 sm:w-3/6 md:w-1/6">
+              <img src="icons/image-13.png" class="">
+            </div>
+            <div>
+              <h4 class="text-2xl font-bold">Find the Perfect Fit</h4>
+              <p>Everybody is different, which is why we <br>offer styles for every body.</p>
+            </div>
+          </div>
+        </div>
+        <div class="order-4">
+          <div class="flex items-center p-6 gap-8">
+            <div class="w-1/6 sm:w-3/6 md:w-1/6">
+              <img src="icons/image-14.png" class="">
+            </div>
+            <div>
+              <h4 class="text-2xl font-bold">Find the Perfect Fit</h4>
+              <p>Everybody is different, which is why we <br>offer styles for every body.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    </main>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.2/flowbite.min.js"></script>
+  </body>
 </html>
